--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.3.1",
     "firebase": "^6.4.0",
     "ng2-validate": "^0.2.0",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
