--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "angular-4-data-table": "^0.4.6",
     "bootstrap": "^4.3.1",
     "firebase": "^6.4.0",
     "ng2-validate": "^0.2.0",
